<resources>
    <string name="app_name">Fora</string>
    <string name="menu_recipes_text">Top Recipes</string>
    <string name="menu_foods_text">Tasty Foods</string>
    <string name="menu_create_text">My Account</string>
    <string name="splash_description_text">The Number 1 Food Rating App</string>
    <string name="title_Text">Title</string>
    <string name="recipe_image_contentDescription">Recipe image</string>
    <string name="recipe_rating_text">"Rating: "</string>
    <string name="menu_add">Add</string>
    <string name="extended_view_ingredients_Text">Ingredients:</string>
    <string name="item_search_text">Search Recipes</string>
    <string name="add_recipe_uri_Hint">Try taking your photo in landscape to minimize clipping!</string>
    <string name="add_recipe_btn_upload_Text">Upload Photo</string>

    <string name="add_recipe_btn_next">Next</string>
    <string name="add_recipe_btn_submit">Submit</string>
    <string name="add_recipe_btn_cancel">Cancel</string>

    <string name="add_recipe_name_txt">Name Your Recipe</string>
    <string name="add_recipe_name_Hint">e.g Ultimate Chocolate Cake</string>

    <string name="add_recipe_instruction_txt">Add Methods</string>
    <string name="add_recipe_instruction_Hint">e.g Mix ingredients in large bowl</string>
    <string name="add_recipe_add_instruction_btn">Add Method To List</string>
    <string name="add_recipe_instruction_list">Method List</string>

    <string name="add_recipe_rating_txt">Rating</string>
    <string name="add_image_txt">Image Preview</string>

    <string name="recipe_fooditem_brand_txt">Brand Name (Optional)</string>
    <string name="recipe_fooditem_brand_food_txt">Food Name</string>
    <string name="recipe_fooditem_quantity_type_txt">Quantity Type</string>
    <string name="recipe_fooditem_quantity_amount_txt">Quantity Amount</string>

    <string name="recipe_fooditem_brand_Hint">Rustlers, Kellogs</string>
    <string name="recipe_fooditem_brand_food_Hint">Burger, Corn Flakes</string>
    <string name="recipe_fooditem_quantity_type_Hint">cups, ml, grams</string>
    <string name="recipe_fooditem_quantity_amount_Hint">1 1/4, 1/2, 568</string>
    <string name="food_brand_txt">Brand Name</string>
    <string name="add_recipe_btn_add">Add Ingredient To List</string>
    <string name="add_ingredient_txt">Ingredient List</string>
    <string name="add_tags_txt">Tags</string>
    <string name="item_card_title_default_txt">Click Me To Add A Recipe Photo!</string>
    <string name="add_recipe_ingredient_txt">Add Ingredients</string>
    <string name="add_food_txt">Food Details</string>
    <string name="add_recipe_tags_txt">Add Tags</string>
    <string name="checkbox_Protein">Protein</string>
    <string name="checkbox_Starch">Starch</string>
    <string name="checkbox_FruitAndVeg">Fruit &amp; Veg</string>
    <string name="checkbox_Condiments">Condiments</string>
    <string name="checkbox_Other">Other</string>
    <string name="checkbox_Unsure">Unsure</string>
    <string name="email_Hint">Email Address</string>
    <string name="username_Hint">Username</string>
    <string name="password_Hint">Password</string>
    <string name="register_switch_page_text">Already Registered? Sign In Here!</string>
    <string name="login_switch_page_text">New User? Register Here!</string>

    <string name="invalid_username">com.google.firebase.auth.FirebaseAuthInvalidUserException: There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="username_message">No account with the provided email address exists.</string>
    <string name="email_format">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The email address is badly formatted.</string>
    <string name="email_message">Error with email address formatting</string>
    <string name="invalid_password">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The password is invalid or the user does not have a password.</string>
    <string name="password_message">Invalid Password</string>
    <string name="unexpected_error">"There was an issue with the provided details."</string>
    <string name="too_many_requests">com.google.firebase.FirebaseTooManyRequestsException: We have blocked all requests from this device due to unusual activity. Try again later. [ Too many unsuccessful login attempts. Please try again later. ]</string>
    <string name="requests_message">Too many login attempts, please try again later.</string>

    <string name="email_exists">com.google.firebase.auth.FirebaseAuthUserCollisionException: The email address is already in use by another account.</string>
    <string name="register_email_message">An account with that email address already exists.</string>
    <string name="password_format">com.google.firebase.auth.FirebaseAuthWeakPasswordException: The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="register_password_message">Password must be at least 6 characters</string>

    <string name="usernameTaken">usernameTaken</string>
    <string name="usernameTakenMessage">An account with that username already exists, please try another.</string>

    <string name="emptyFields">emptyFields</string>
    <string name="emptyFieldsMessage">"Please don't leave any fields empty"</string>
</resources>