<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_fooditem_brand_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:gravity="center|start"
                android:paddingLeft="4dp"
                android:text="@string/recipe_fooditem_brand_txt"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/recipe_fooditem_brand"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:fontFamily="@font/open_sans"
                android:hint="@string/recipe_fooditem_brand_Hint"
                android:inputType="textPersonName"
                android:paddingLeft="4dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/recipe_fooditem_brand_food_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:gravity="center|start"
                android:paddingLeft="4dp"
                android:text="@string/recipe_fooditem_brand_food_txt"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/recipe_fooditem_brand_food"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/recipe_fooditem_brand_food_Hint"
                android:inputType="textPersonName"
                android:paddingLeft="4dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_fooditem_quantity_type_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:gravity="center|start"
                android:paddingLeft="4dp"
                android:text="@string/recipe_fooditem_quantity_type_txt"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/recipe_fooditem_quantity_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/recipe_fooditem_quantity_type_Hint"
                android:inputType="textPersonName"
                android:paddingLeft="4dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/recipe_fooditem_quantity_amount_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:gravity="center|start"
                android:paddingLeft="4dp"
                android:text="@string/recipe_fooditem_quantity_amount_txt"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/recipe_fooditem_quantity_amount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/recipe_fooditem_quantity_amount_Hint"
                android:inputType="textPersonName"
                android:paddingLeft="4dp"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>