<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_background"
    android:orientation="vertical"
    android:padding="2dp"
    android:weightSum="30"
    tools:context=".ui.recipe.AddRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="5"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="4dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/add_recipe_name_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2"
            android:background="@drawable/green_background"
            android:fontFamily="@font/open_sans"
            android:gravity="center|start"
            android:paddingLeft="4dp"
            android:text="@string/add_recipe_name_txt"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/add_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/add_recipe_name_Hint"
            android:inputType="text"
            android:paddingLeft="4dp" />
    </LinearLayout>

    <include
        layout="@layout/item_recipe_fooditem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="9"
        android:background="#FFFFFF">

    </include>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/add_recipe_recyclerview"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_margin="8dp"-->
    <!--        android:layout_weight="9">-->

    <!--    </androidx.recyclerview.widget.RecyclerView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal"
        android:weightSum="10">


        <include
            android:id="@+id/card_add"
            layout="@layout/items_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"></include>

        <include
            android:id="@+id/card_upload"
            layout="@layout/items_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"></include>


    </LinearLayout>

    <TextView
        android:id="@+id/add_recipe_uri"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans"
        android:hint="@string/add_recipe_uri_Hint" />

    <!--    <Button-->
    <!--        android:id="@+id/add_recipe_btn_upload"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_margin="4dp"-->
    <!--        android:layout_weight="3"-->
    <!--        android:text="@string/add_recipe_btn_upload_Text" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/add_recipe_btn_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/add_recipe_btn_submit" />

        <Button
            android:id="@+id/add_recipe_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/add_recipe_btn_cancel" />
    </LinearLayout>

</LinearLayout>